    \itemize{
      \item Using NEWS.Rd;
    }
  }
  \subsection{NEW FEATURES}{
    \itemize{
      \item New summarization methods are available: PLM, PLMr, PLMrr
  and PLMrc. These are implemented in the basicPLM function and also
  available through the summarize() interface (method=c('plm', 'plmr',
  'plmrr', 'plmrc')), but yet to be extended to large datasets and to be
  parallelized;
      \item fitPLM(), NUSE() and RLE() are now available;
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item 'pm<-', 'mm<-', 'bg<-' now work with ff_matrix replacements
    }
  }
}

\section{Changes in version 1.14}{
  \subsection{USER VISIBLE CHANGES}{
    \itemize{
      \item Added support to read gzipped XYS files directly.
      \item Added information for citation.
      \item Added getNetAffx method to retrieve NetAffx annotation for
        Exon ST and Gene ST arrays.
      \item Reading in uncompressed XYS files is much faster than in 1.12.2.
      \item Added vignette for Exon/Gene ST arrays (rma and NetAffx annot)
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Fixed bug in boxplot / hist / MAplot
      \item Fixed issue that would appear with GeneFeatureSet objects,
        in which it selections like obj[c(2, 2, 1),] would generate
        invalid GeneFeatureSet objects
      \item Fixed bugs in image / bg / bgindex / bgSequence
        for Exon and Gene arrays (due to changes in annotation)
      \item Added date/time of scan (for XYS/CEL files) to the 
        protocolData slot. For 1 channel applications, the field
        is called 'dates'; for 2 channel apps, there are 2 fields:
        'dates1' and 'dates2'
    }
  }
  \subsection{NEW FEATURES}{
    \itemize{
      \item New method, runDate(), to extract scan dates from
        FeatureSet objects
    }
  }
}
\section{Changes in version 1.11}{
  \subsection{USER VISIBLE CHANGES}{
    \itemize{
      \item New vignette structure:
        Vignette 1: Overview (with multiple examples)