@@ -1,5 +1,5 @@
 Package: oligo
-Version: 1.15.9
+Version: 1.15.10
 Title: Preprocessing tools for oligonucleotide arrays.
 Author: Benilton Carvalho <Benilton.Carvalho@cancer.org.uk>, Rafael A. Irizarry with contributions from Ben Bolstad, Vince Carey, Robert Gentleman, Wolfgang Huber
 Maintainer: Benilton Carvalho <Benilton.Carvalho@cancer.org.uk>
@@ -9,6 +9,7 @@ Depends: R (>= 2.13.0),
 Imports: affyio (>= 1.19.4),
          affxparser (>= 1.23.1),
          Biobase (>= 2.11.8),
+         Biostrings,
          DBI (>= 0.2-5),
          graphics,
          methods,
@@ -20,6 +21,7 @@ Enhances: ff,
 LinkingTo: preprocessCore
 Suggests: hapmap100kxba,
           pd.mapping50k.xba240,
+          pd.huex.1.0.st.v2,
           pd.hg18.60mer.expr,
           maqcExpression4plex,
           genefilter,
