@@ -14,7 +14,8 @@
   available through the summarize() interface (method=c('plm', 'plmr',
   'plmrr', 'plmrc')), but yet to be extended to large datasets and to be
   parallelized;
-      \item fitPLM(), NUSE() and RLE() are now available;
+  \item fitPLM(), NUSE() and RLE() are now available;
+  \item Presence/Absence calls are available through paCalls();
     }
   }
   \subsection{BUG FIXES}{
